# BookEngine

./: .gitignore  .gitmodules  BookLinux.sh  BookWinMingwCompile.bat  BookWinMingwDebug.bat  BookWinMingwRelease.bat  BookWinVS.bat  CMakeLists.txt  README.md  compile_commands.json
BookEditor/: CMakeLists.txt
BookEditor/src/: Editor.cpp
BookEngine/: CMakeLists.txt
BookEngine/includes/: Book.hpp  BookPch.hpp
BookEngine/includes/Application/: Application.hpp  Context.hpp  Interface.hpp
BookEngine/includes/Auxiliaries/: ECS.hpp
BookEngine/includes/Common/: Core.hpp  Event.hpp
BookEngine/includes/Graphics/: Renderer.hpp
BookEngine/includes/Graphics/Buffers/: Frame.hpp  Mesh.hpp  Vertex.hpp
BookEngine/includes/Graphics/Models/: Helper.hpp  Model.hpp
BookEngine/includes/Graphics/Shaders/: Final.hpp  PBR.hpp  Shader.hpp
BookEngine/includes/Graphics/Utilities/: Data.h  Quad.hpp
BookEngine/includes/Window/: Event.hpp  Inputs.hpp  Window.hpp
BookEngine/src/: Book.cpp  BookPch.cpp
BookEngine/vendors/GLFW/: CMakeLists.txt
BookEngine/vendors/Glad/: CMakeLists.txt
BookEngine/vendors/Glad/include/include/glad/: glad.h
BookEngine/vendors/Glad/include/src/: glad.c
BookEngine/vendors/assimp/: CMakeLists.txt
BookEngine/vendors/entt/: CMakeLists.txt
BookEngine/vendors/glm/: CMakeLists.txt
BookEngine/vendors/spdlog/: CMakeLists.txt
BookGame/: CMakeLists.txt
BookGame/src/: Game.cpp
Resources/Shaders/: final.glsl  pbr.glsl
